k8s/manifests/younes-gay/service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: younes-gay
  namespace: younes-gay

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: younes-gay
