k8s/manifests/younes-gay/ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: younes-gay
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx
  rules:
    - host: younes.gay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: younes-gay
                port:
                  name: http

tls:
  - hosts:
    - younes.gay
    secretName: younes-gay-tls
